--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,11 @@ title: "index"
 author: "Shannon Silva"
 date: "2/26/2020"
 output: html_document
+bibliography: data/references.bib
 ---
 
 *[Lab5](Lab5_sjs.html)
+
+Application written in R [@RCoreTeam] using the Shiny framework [@Chang2015]
+
+# References 
